--- a/app/demo.html
+++ b/app/demo.html
@@ -468,6 +468,7 @@
     // Helper for logging events
     var vertices = [];
     var logContainer;
+    var result;
     // var mainGroup;
     // Step 4: create custom logging facilities
     function createLogContainer(map)
@@ -707,6 +708,39 @@
 
 
 
+    /*------------------------------------------------------------------------------------------------------------------------------------- */
+    /*------------------------------------------------------------------------------------------------------------------------------------- */
+    /*-------------------------------------------------Encoding --------------------------------------------------------------------- */
+    /*------------------------------------------------------------------------------------------------------------------------------------- */
+    /*------------------------------------------------------------------------------------------------------------------------------------- */
+
+
+    function convertToGeoJSON(inputArray)
+    {
+      const coordinates = [];
+
+      // Extract latitudes and longitudes from the input array
+      for (let i = 0; i < inputArray.length; i += 3)
+      {
+        const lat = inputArray[i];
+        const lng = inputArray[i + 1];
+        coordinates.push({ lat, lng });
+      }
+
+      // Create the GeoJSON-like polygon object with a "type" field
+      const geoJSONPolygon = {
+        type: "polygon",
+        inner: coordinates
+      };
+
+      return geoJSONPolygon;
+    }
+
+
+
+
+
+
 
 
 
@@ -726,8 +760,9 @@
     var routes = new H.map.Group();
 
 
-    function calculateRoutes(platform, source, destination)
+    async function calculateRoutes(platform, source, destination)
     {
+      result = await convertToGeoJSON(vertices);
       var source = source.latitude + "," + source.longitude;
       var destination = destination.latitude + "," + destination.longitude;
 
@@ -755,6 +790,12 @@
           transportMode: selectedTransportMode,
           origin: source,
           destination: destination,
+          // avoidareas: { "areas": [result] },
+          // avoidareas: "13.010447702993071,80.23368260925976;13.00940761197399,80.23942748389136;13.013127932755168,80.23919067286062;13.01378488503507,80.23384638681429;",
+          avoidareas: [13.010447702993071, 80.23368260925976,
+            13.00940761197399, 80.23942748389136,
+            13.013127932755168, 80.23919067286062,
+            13.01378488503507, 80.23384638681429],
           return: 'polyline,travelSummary',
           units: 'metric',
         };
