--- a/app/demo.html
+++ b/app/demo.html
@@ -26,10 +26,10 @@
     <button id="destButton" class="btn btn-primary">Set destination</button>
     <button id="confirmLocationButton" class="btn btn-primary">Confirm location</button>
     <button id="navigateButton" class="btn btn-primary">Show Route</button>
-    <button id="obstacleStartButton" class="btn btn-primary">Create Avoidance Area</button>
-    <button id="obstacleButton" class="btn btn-primary">Confirm Avoidance Area</button>
+    <!-- <button id="obstacleStartButton" class="btn btn-primary">Create Avoidance Area</button> -->
+    <!-- <button id="obstacleButton" class="btn btn-primary">Confirm Avoidance Area</button> -->
     <button id="addRectButton">Add Rectangle</button>
-    <button id="getWaypoints">Get Waypoints</button>
+    <!-- <button id="getWaypoints">Get Waypoints</button> -->
     <select id="alternatives">
       <option value="0">0</option>
       <option value="1">1</option>
